--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.espi.ebackup</groupId>
     <artifactId>ebackup</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.1-cron4j</version>
 
     <licenses>
         <license>
@@ -137,9 +137,9 @@
             <version>3.8.0</version>
         </dependency>
         <dependency>
-            <groupId>com.cronutils</groupId>
-            <artifactId>cron-utils</artifactId>
-            <version>9.1.6</version>
+            <groupId>it.sauronsoftware.cron4j</groupId>
+            <artifactId>cron4j</artifactId>
+            <version>2.2.5</version>
         </dependency>
 
     </dependencies>
